# tamhome_interactive_cleanup

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: interactive_cleanup.rviz
launch/: interactive_cleanup.launch
script/: task_node.py  testcode.py  time_server.py
script/state_machine/: cleanup.py  move.py  pickup.py  recog_target_point.py  recognition.py  standard.py
srv/: SendTransform.srv
