<?xml version="1.0"?>
<package format="2">
  <name>tamhome_interactive_cleanup</name>
  <version>0.0.0</version>
  <description>The tamhome_interactive_cleanup package</description>

  <maintainer email="yano.yuuga158@mail.kyutech.jp">Yuga Yano</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
